# fine_tuned_resnet

./: .gitignore  README.md  dataset.py  main.py  pyproject.toml  train.py
wandb/: latest-run
wandb/run-20250617_172430-ch44oc3k/: run-ch44oc3k.wandb
wandb/run-20250617_172430-ch44oc3k/files/: requirements.txt  wandb-metadata.json
wandb/run-20250617_172908-aykg61ev/: run-aykg61ev.wandb
wandb/run-20250617_172908-aykg61ev/files/: wandb-metadata.json
wandb/run-20250617_173224-ln0s6beo/: run-ln0s6beo.wandb
wandb/run-20250617_173224-ln0s6beo/files/: wandb-metadata.json
wandb/run-20250617_173530-1uzluww0/: run-1uzluww0.wandb
wandb/run-20250617_173530-1uzluww0/files/: config.yaml  wandb-metadata.json
wandb/run-20250617_173940-lui00t7c/: run-lui00t7c.wandb
wandb/run-20250617_173940-lui00t7c/files/: config.yaml  wandb-metadata.json  wandb-summary.json
